@@ -29,6 +29,11 @@ exclude_match = cpanfile*
 [RecommendedPrereqs]
 [AutoPrereqs]
 
+[Prereqs]
+-phase = develop
+-relationship = requires
+Test::Vars = 0.015
+
 [EnsurePrereqsInstalled]
 :version = 0.003
 type = requires
