@@ -4,6 +4,9 @@ Revision history for {{$dist->name}}:
   [Enhancements]
   - Add more file extensions to script_extensions rule.
 
+  [Tests]
+  - Add author tests.
+
 v0.4.3    2021-04-09 16:39:01+01:00 Europe/London
   [Enhancements]
   - Add more file extensions to script_extensions rule.
